--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <title>РосМигрант</title>
 </head>
 <body>
-    <header>
-        <div class="container">
+    <header class="header">
+        <div class="container header__inner">
             <a href="#">
                 <img src="./img/logo.svg" alt="">
             </a>
             <div class="lang__wrapper">
                 <h3>Изменить язык:</h3>
                 <div class="lang__inner">
-                    <button>
-                        <img src="./img/uz.png" alt="">
+                    <button class="lang__active">
+                        <img src="./img/uz.svg " alt="">
                     </button>
                     <button>
-                        <img src="./img/tj.png" alt="">
+                        <img src="./img/tj.svg " alt="">
                     </button>
                     <button>
-                        <img src="./img/kr.png" alt="">
+                        <img src="./img/kr.svg " alt="">
                     </button>
                     <button>
-                        <img src="./img/ru.png" alt="">
+                        <img src="./img/ru.svg " alt="">
                     </button>
                 </div>
             </div>
-        </div>
+        </div> 
     </header>
 
     <main class="main">
