--- a/index.html
+++ b/index.html
@@ -70,17 +70,37 @@
                 <div class="main__slider">
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
-                          <div class="swiper-slide">Slide 1</div>
-                          <div class="swiper-slide">Slide 2</div>
-                          <div class="swiper-slide">Slide 3</div>
-                          <div class="swiper-slide">Slide 4</div>
-                          <div class="swiper-slide">Slide 5</div>
-                          <div class="swiper-slide">Slide 6</div>
-                          <div class="swiper-slide">Slide 7</div>
-                          <div class="swiper-slide">Slide 8</div>
-                          <div class="swiper-slide">Slide 9</div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone.png" alt="">
+                          </div>
                         </div>
                         <div class="swiper-pagination"></div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                       </div>
                 </div>
             </div>
@@ -91,12 +111,16 @@
     <script>
         var swiper = new Swiper(".mySwiper", {
           slidesPerView: 3,
-          spaceBetween: 30,
+          spaceBetween: 40,
           freeMode: true,
           pagination: {
             el: ".swiper-pagination",
             clickable: true,
           },
+          navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
         });
       </script>
     <script src="./js/mian.js"></script>
