--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
         </div>
     </main>
 
+    <a href="./karta.html">sdasdasdasdas</a>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
           slidesPerView: 3,
-          spaceBetween: 40,
+          spaceBetween: 80,
           freeMode: true,
           pagination: {
             el: ".swiper-pagination",
