--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="/img/logIcon.svg">
+    <link rel="apple-touch-icon" href="/img/logIcon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/main.min.css">
-    <title>РосМигрант</title>
+    <title >РосМигрант</title>
 </head>
 <body>
     <header class="header">
