pullin g for home

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="lang__wrapper">
                 <h3>Изменить язык:</h3>
                 <div class="lang__inner">
-                    <button class="lang__active">
-                        <img src="./img/uz.svg " alt="">
+                    <button >
+                        <img class="lang__active" src="./img/uz.svg " alt="">
                     </button>
                     <button>
                         <img src="./img/tj.svg " alt="">
