--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           slidesPerView: 3,
           spaceBetween: 80,
           freeMode: true,
+          loop: true,
           pagination: {
             el: ".swiper-pagination",
             clickable: true,
