--- a/index.html
+++ b/index.html
@@ -91,30 +91,32 @@
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                           <div class="swiper-slide">
-                            <img src="./img/phone.png" alt="">
+                            <img src="./img/phone3.png" alt="">
                           </div>
                           <div class="swiper-slide">
                             <img src="./img/phone.png" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="./img/phone.png" alt="">
+                            <img src="./img/phone2.png" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <img src="./img/phone3.png" alt="">
                           </div>
                           <div class="swiper-slide">
                             <img src="./img/phone.png" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="./img/phone.png" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <img src="./img/phone.png" alt="">
+                            <img src="./img/phone2.png" alt="">
                           </div>
                           <div class="swiper-slide">
                             <img src="./img/phone.png" alt="">
                           </div>
                         </div>
                         <div class="swiper-pagination"></div>
+                       <div class="novigation__wrapper">
                         <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div>
+                       </div>
                       </div>
                 </div>
             </div>
